kubernetes/apps/it-tools/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
spec:
  selector:
    matchLabels:
      app: it-tools
  replicas: 1
  template:
    metadata:
      labels:
        app: it-tools
    spec:
      containers:
        - name: it-tools
          image: harbor.leehosanganson.dev/dockerhub/corentinth/it-tools:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
