kubernetes/apps/it-tools/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
spec:
  selector:
    app: it-tools
  ports:
    - port: 80
      targetPort: 80
